# Customer_Churn_Predictor

./: .gitignore  LICENSE  README.md  environment.yml  install.md  pyproject.toml  requirements.txt  setup.py
churn_predictor/: dataset.py  plot.py
data/processed/: cleaned_dataset.csv
notebooks/: 1.0_dsb_data_preparation.ipynb  2.0_dsb_data_exploration.ipynb
